fixed card overflow bug

--- a/styles.css
+++ b/styles.css
@@ -101,6 +101,7 @@ h1 {
 
 #result {
 	overflow-x: auto;
+	/* overflow-y: visible; */
 }
 
 #result td,
@@ -211,14 +212,14 @@ h1 {
 }
 
 .card {
-	height: 600px;
-	/* max-height: 600px; */
+	/* min-height: 300px; */
+	max-height: 590px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 .card-body {
-	height: 150px !important;
+	height: 300px !important;
 }
 
 .card .img-container {
@@ -252,10 +253,15 @@ h1 {
 
 .cards-container {
 	display: grid;
-	grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+	grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 	/* justify-items: ; */
 	column-gap: 0.8rem;
 	row-gap: 5px;
+}
+
+.card button {
+	position: relative;
+	z-index: 100;
 }
 
 /* @media only screen and (min-width: 1100px) {
